--- a/.prettierrc.yaml
+++ b/.prettierrc.yaml
@@ -3,7 +3,7 @@ singleQuote: true
 # 结尾使用分号
 semi: false
 # 每行最多100个字符
-printWidth: 100
+printWidth: 150
 # 在多行分隔符时，尾随逗号
 trailingComma: none
 # 缩进2个空格
@@ -13,4 +13,4 @@ useTabs: false
 # jsx使用单引号
 jsxSingleQuote: true
 # 换行符
-endOfLine: "lf"
+endOfLine: 'lf'
